--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "peerDependencies": {
     "formsy-react": "^0.18.0",
-    "material-ui": "0.15.0-beta.1",
+    "material-ui": "^0.15.0",
     "react": "^15.0.0",
     "react-dom": "^15.0.0"
   },
